// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and toggles open/closed 1`] = `
<div
  className="row center-just"
>
  <div
    aria-label="Enterprise SSO Login"
    className="start_sso focus-visible sso-clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="inner-border"
    >
      <div
        className="sso-clickable keeper-outfit outfit-body-medium"
      >
        Enterprise SSO Login
      </div>
      <svg
        fill="none"
        height="24"
        viewBox="0 0 25 24"
        width="25"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 10L12.5 15L17.5 10H7.5Z"
          fill="white"
        />
        <g
          mask="url(#mask0_310_5174)"
        >
          <rect
            height="24"
            width="24"
            x="0.5"
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    className="hidden"
    id="sso-choice-dropdown"
  >
    <div
      className="sso-choice-item focus-visible sso-choice-box"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="title keeper-outfit outfit-body-medium"
      >
        Enterprise Domain
      </div>
      <div
        className="desc keeper-outfit outfit-body-small"
      >
        SSO User with an Enterprise Domain
      </div>
    </div>
    <div
      className="sso-choice-item focus-visible master-password-box"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="title keeper-outfit outfit-body-medium"
      >
        Master Password
      </div>
      <div
        className="desc keeper-outfit outfit-body-small"
      >
        SSO User with a Master Password
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and toggles open/closed 2`] = `
<div
  className="row center-just"
>
  <div
    aria-label="Enterprise SSO Login"
    className="start_sso focus-visible sso-clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="inner-border"
    >
      <div
        className="sso-clickable keeper-outfit outfit-body-medium"
      >
        Enterprise SSO Login
      </div>
      <svg
        fill="none"
        height="24"
        viewBox="0 0 25 24"
        width="25"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 10L12.5 15L17.5 10H7.5Z"
          fill="white"
        />
        <g
          mask="url(#mask0_310_5174)"
        >
          <rect
            height="24"
            width="24"
            x="0.5"
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    className=""
    id="sso-choice-dropdown"
  >
    <div
      className="sso-choice-item focus-visible sso-choice-box"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="title keeper-outfit outfit-body-medium"
      >
        Enterprise Domain
      </div>
      <div
        className="desc keeper-outfit outfit-body-small"
      >
        SSO User with an Enterprise Domain
      </div>
    </div>
    <div
      className="sso-choice-item focus-visible master-password-box"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="title keeper-outfit outfit-body-medium"
      >
        Master Password
      </div>
      <div
        className="desc keeper-outfit outfit-body-small"
      >
        SSO User with a Master Password
      </div>
    </div>
  </div>
</div>
`;
